# cookbook

./: .gitignore  .gitmodules  CLAUDE.md  README.md  flake.nix  lefthook.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
book/: 00-index.md  myst.yml  pyproject.toml
book/01-introduction/: 00-ch0.md  01-ch1.md  02-ch2.md  03-ch3.md
book/02-dafny/: 00-ch0.md  01-ch1.md  02-ch2.md
book/02-dafny-and-inspect/: 00-ch0.md  01-ch1.md  02-ch2.md  03-ch3.md  04-ch4.md  05-ch5.md  06-ch6.html  06-ch6.md  07-ch7.md
book/03-dafny-and-plain/: 00-ch0.md  01-ch1.md  02-ch2.md  03-ch3.md  04-ch4.md  05-ch5.md  06-ch6.md  07-ch7.md  08-ch8.md  09-ch9.md  PLAN_OUTLINE.md  PLAN_OUTLINE_AGENT.md
book/03-dafny-and-rawdog/: 00-ch0.md  (+1 more)
evals/: CLAUDE.md  README.md  pyproject.toml
evals/src/evals/: __init__.py
evals/src/evals/dafnybench/common/: __init__.py  dataset.py
evals/src/evals/dafnybench/inspect_ai/: __init__.py  dataset.py  metrics.py  prompt.py  tools.py  utils.py
evals/src/evals/dafnybench/plain/: __init__.py  agent.py  config.py  config.toml  io_util.py  metrics.py  prompt.py  structures.py  tools.py  types.py
evals/src/evals/dafnybench/rawdog/: __init__.py  agent.py  config.py  config.toml  metrics.py  prompt.py  tools.py  types.py
evals/src/evals/dalek_history/: CLAUDE.md  __init__.py  cli.py  config.py  config.toml  file_classifier.py  git_ops.py  jsonl_writer.py  metrics.py  snapshot.py  structures.py  verification.py
evals/src/evals/fvapps/pydantic_ai/: __init__.py  agent.py  dataset.py  prompt.py  tools.py  types.py  utils.py
evals/src/tests/: __init__.py
evals/src/tests/dafnybench/: test_plain_config.py  test_plain_tools.py  test_rawdog_config.py  test_rawdog_tools.py
evals/tests/: test_rawdog_tools.py
operations/: cookbook.service  nginx-cookbook.conf
scripts/: README.md  lean_agent_helix.py  pyproject.toml
(+17 files in other folders)
